First Stable Alpha Release
Changed Resources Path, and added the Resource Sandbox solution

--- a/Themes/GCWU - SharePoint 2013/GCWU.html
+++ b/Themes/GCWU - SharePoint 2013/GCWU.html
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?><!--SPG:
 
-This HTML file has been associated with a SharePoint Master Page (.master file) carrying the same name.  While the files remain associated, you will not be allowed to edit the .master file, and any rename, move, or deletion operations will be reciprocated.
+This is an alpha release of the Web Experience Toolkit Template for SharePoint 2013. Continuous development is being made on it, so stay tuned on GitHub for the latest releases.
 
-To build the master page directly from this HTML file, simply edit the page as you normally would.  Use the Snippet Generator at http://lob2013.lac-bac.int/sites/test2/_layouts/15/ComponentHome.aspx?Url=http%3A%2F%2Flob2013%2Elac%2Dbac%2Eint%2Fsites%2Ftest2%2F%5Fcatalogs%2Fmasterpage%2FGCWU%2FGCWU%2Emaster to create and customize useful SharePoint entities, then copy and paste them as HTML snippets into your HTML code.   All updates to this file will automatically sync to the associated Master Page.
+Nik Charlebois
+Nikolas.Charlebois-Laprade@BAC-LAC.gc.ca
 
 -->
 <!-- _lcid="1033" _version="15.0.4505" _dal="1" -->
@@ -30,7 +31,7 @@ To build the master page directly from this HTML file, simply edit the page as y
         <!--SPM:</SharePoint:PageTitle>-->
         <!--SPM:<SharePoint:StartScript runat="server"/>-->
         <!--SPM:<SharePoint:CssLink runat="server" Version="15"/>-->
-        <!--PS: Start of READ-ONLY PREVIEW (do not modify) --><link href="http://lob2013.lac-bac.int/_layouts/15/1033/styles/corev15.css" type="text/css" rel="stylesheet" /><link href="http://lob2013.lac-bac.int/_layouts/15/1033/styles/searchv15.css" type="text/css" rel="stylesheet" /><!--PE: End of READ-ONLY PREVIEW -->
+        <!--PS: Start of READ-ONLY PREVIEW (do not modify) --><link href="/_layouts/15/1033/styles/corev15.css" type="text/css" rel="stylesheet" /><link href="/_layouts/15/1033/styles/searchv15.css" type="text/css" rel="stylesheet" /><!--PE: End of READ-ONLY PREVIEW -->
         <!--SPM:<SharePoint:CacheManifestLink runat="server"/>-->
         <!--SPM:<SharePoint:ScriptLink language="javascript" name="core.js" OnDemand="true" runat="server" Localizable="false"/>-->
         <!--SPM:<SharePoint:ScriptLink language="javascript" name="menu.js" OnDemand="true" runat="server" Localizable="false"/>-->
@@ -42,10 +43,10 @@ To build the master page directly from this HTML file, simply edit the page as y
         <!--SPG:
             Start of WET Imports
         -->     
-        <link rel="stylesheet" href="/_catalogs/masterpage/GCWU/grids/css/util-min.css" />
-        <link rel="stylesheet" href="/_catalogs/masterpage/GCWU/js/css/pe-ap-min.css" />
-        <link rel="stylesheet" href="/_catalogs/masterpage/GCWU/theme-gcwu-fegc/css/theme-min.css" />
-        <noscript><link rel="stylesheet" href="/_catalogs/masterpage/GCWU/theme-gcwu-fegc/css/theme-ns-min.css" /></noscript>        
+        <link rel="stylesheet" href="/Style Library/CSS Style Sheets/GCWU/grids/css/util-min.css" />
+        <link rel="stylesheet" href="/Style Library/CSS Style Sheets/GCWU/js/css/pe-ap-min.css" />
+        <link rel="stylesheet" href="/Style Library/CSS Style Sheets/GCWU/theme-gcwu-fegc/css/theme-min.css" />
+        <noscript><link rel="stylesheet" href="/Style Library/CSS Style Sheets/GCWU/theme-gcwu-fegc/css/theme-ns-min.css" /></noscript>        
 
         <!--SPM:<SharePoint:CustomJSUrl runat="server"/>-->
         <!--SPM:<SharePoint:SoapDiscoveryLink runat="server"/>-->
@@ -60,7 +61,7 @@ To build the master page directly from this HTML file, simply edit the page as y
 <mso:CustomDocumentProperties>
 <mso:_dlc_DocId msdt:dt="string">WOSA-8-206</mso:_dlc_DocId>
 <mso:_dlc_DocIdItemGuid msdt:dt="string">ccb9dd9a-2c4f-4027-9298-f9dd9659ab0f</mso:_dlc_DocIdItemGuid>
-<mso:_dlc_DocIdUrl msdt:dt="string">http://lob2013.lac-bac.int/sites/wosa/_layouts/15/DocIdRedir.aspx?ID=WOSA-8-206, WOSA-8-206</mso:_dlc_DocIdUrl>
+<mso:_dlc_DocIdUrl msdt:dt="string">/sites/wosa/_layouts/15/DocIdRedir.aspx?ID=WOSA-8-206, WOSA-8-206</mso:_dlc_DocIdUrl>
 <mso:ContentType msdt:dt="string">Html Master Page</mso:ContentType>
 
 <mso:HtmlDesignFromMaster msdt:dt="string"></mso:HtmlDesignFromMaster>
@@ -72,7 +73,7 @@ To build the master page directly from this HTML file, simply edit the page as y
 <mso:PublishingHidden msdt:dt="string">0</mso:PublishingHidden>
 <mso:HtmlDesignAssociated msdt:dt="string">1</mso:HtmlDesignAssociated>
 
-<mso:HtmlDesignStatusAndPreview msdt:dt="string">http://lob2013.lac-bac.int/sites/test2/_catalogs/masterpage/GCWU/GCWU.html, Warnings and Errors.</mso:HtmlDesignStatusAndPreview>
+<mso:HtmlDesignStatusAndPreview msdt:dt="string">/_catalogs/masterpage/GCWU/GCWU.html, Warnings and Errors.</mso:HtmlDesignStatusAndPreview>
 <mso:ContentTypeId msdt:dt="string">0x0101000F1C8B9E0EB4BE489F09807B2C53288F0054AD6EF48B9F7B45A142F8173F171BD10003D357F861E29844953D5CAA1D4D8A3A007BFC28DADC69034AB81F58DF6319DDBC</mso:ContentTypeId>
 </mso:CustomDocumentProperties>
 </xml><![endif]-->
@@ -154,8 +155,8 @@ To build the master page directly from this HTML file, simply edit the page as y
                                     <div id="gcwu-gcnb-fip">
                                         <div id="gcwu-sig">
                                             <div id="gcwu-sig-in">
-                                                <object data="/_catalogs/masterpage/GCWU/theme-gcwu-fegc/images/sig-eng.svg" role="img" tabindex="-1" aria-label="Government of Canada" type="image/svg+xml">
-                                                    <img src="/_catalogs/masterpage/GCWU/theme-gcwu-fegc/images/sig-eng.png" alt="Government of Canada" />
+                                                <object data="/Style Library/CSS Style Sheets/GCWU/theme-gcwu-fegc/images/sig-eng.svg" role="img" tabindex="-1" aria-label="Government of Canada" type="image/svg+xml">
+                                                    <img src="/Style Library/CSS Style Sheets/GCWU/theme-gcwu-fegc/images/sig-eng.png" alt="Government of Canada" />
                                                 </object>
                                             </div>
                                         </div>
@@ -173,8 +174,8 @@ To build the master page directly from this HTML file, simply edit the page as y
                             <div id="gcwu-bnr-in">
                                 <div id="gcwu-wmms">
                                     <div id="gcwu-wmms-in">
-                                        <object data="/_catalogs/masterpage/GCWU/theme-gcwu-fegc/images/wmms.svg" role="img" tabindex="-1" aria-label="Symbol of the Government of Canada" type="image/svg+xml">
-                                            <img src="/_catalogs/masterpage/GCWU/theme-gcwu-fegc/images/wmms.png" alt="Symbol of the Government of Canada" />
+                                        <object data="/Style Library/CSS Style Sheets/GCWU/theme-gcwu-fegc/images/wmms.svg" role="img" tabindex="-1" aria-label="Symbol of the Government of Canada" type="image/svg+xml">
+                                            <img src="/Style Library/CSS Style Sheets/GCWU/theme-gcwu-fegc/images/wmms.png" alt="Symbol of the Government of Canada" />
                                         </object>
                                     </div>
                                 </div>
@@ -542,9 +543,9 @@ To build the master page directly from this HTML file, simply edit the page as y
             <!--SPM:<asp:ContentPlaceHolder id="PlaceHolderGlobalNavigationSiteMap" runat="server" Visible="false"/>-->
             <!--SPM:<asp:ContentPlaceHolder id="WSSDesignConsole" runat="server" Visible="false"/>-->
         </div>
-        <script type="text/javascript" src="/_catalogs/masterpage/js/settings.js" />
-        <script type="text/javascript" src="/_catalogs/masterpage/theme-gcwu-fegc/js/theme-min.js" />
-        <script type="text/javascript" src="/_catalogs/masterpage/theme-gcwu-fegc/js/pe-ap-min.js" />
+        <script type="text/javascript" src="/Style Library/CSS Style Sheets/js/settings.js" />
+        <script type="text/javascript" src="/Style Library/CSS Style Sheets/theme-gcwu-fegc/js/theme-min.js" />
+        <script type="text/javascript" src="/Style Library/CSS Style Sheets/js/pe-ap-min.js" />
 
         <!--SPM:<SharePoint:ScriptBlock runat="server">-->
         <!--SPM:var g_Workspace = "s4-workspace";-->
