--- a/Themes/GCWU - SharePoint 2013/GCWU-1Col.html
+++ b/Themes/GCWU - SharePoint 2013/GCWU-1Col.html
@@ -80,6 +80,10 @@ To build the master page directly from this HTML file, simply edit the page as y
         <!--DC:-->
         <!--MS:<style type="text/css">//<![CDATA[-->
             <!--
+	    #layoutsTable td
+	    {
+		border:0px !important;
+	    }
             .ms-srch-sbLarge-searchImg
             {
                 left:-65px;
